[package]
name = "omni_proxy"
version = "0.1.0"
edition = "2024"
description = "OmniProxy: modern MITM proxy core with filter-chain and wasm hooks"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
hudsucker = { path = "../hudsucker", default-features = false, features = ["http2", "rcgen-ca", "rustls-client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "fs", "sync", "net", "time"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
wasmtime = { version = "38", default-features = false, features = ["cranelift", "runtime"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
