[package]
name = "omni_proxy"
version = "0.1.0"
edition = "2024"
description = "OmniProxy: modern MITM proxy core with filter-chain and wasm hooks"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
futures-util = "0.3"
hudsucker = { version = "0.24", default-features = false, features = ["http2", "rcgen-ca", "rustls-client"] }
http-body-util = "0.1"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "fs", "sync", "net", "time"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
wasmtime = { version = "38", default-features = false, features = ["cranelift", "runtime"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
maintainer = "tianrking <tian.r.king@gmail.com>"
copyright = "2026, tianrking"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "net"
priority = "optional"
extended-description = "OmniProxy is a modern MITM proxy core with filter-chain, WebSocket API, TUI, and Wasm plugin runtime."
assets = [
  ["target/release/omni_proxy", "usr/bin/omni-proxy", "755"],
  ["target/release/omni-tui", "usr/bin/omni-tui", "755"],
  ["README.md", "usr/share/doc/omni-proxy/README.md", "644"],
]
